--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 <body>
     <div class="sidebar">
-        <h1>Solo Study <img src="images\computer.png"></h1>
+        <h1>Solo Study <img src="images\laptop.png"></h1>
         <button onclick="changeTheme1()">Theme 1</button>
         <button  onclick="changeTheme2()">Theme 2</button>
         <button  onclick="changeTheme3()">Theme 3</button>
@@ -50,12 +50,18 @@
         </div>
     </div>
     <div class="bgmusic">
-        <h2 id="bghead">Background Music</h2>
+        <h2 id="bghead">Focus Music</h2>
         <div id="music">
             <iframe id = "musicframe" width="560" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=zAM1dqNBLOGRk26v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         
     </div>
+    <footer>
+        <p class="foot">Made with ❤️ by Ujjwal</p>
+        <a class ="foot" href="https://github.com/ujjwal-py" target="_blank">Github</a>
+        <a class ="foot" href="https://www.linkedin.com/in/ujjwal-kumar-93ba18276/" target="_blank">Linkedin</a>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
