--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="sidebar">
         <h1>Solo Study <img src="images\laptop.png"></h1>
     </div>
-    <div class="tools">
+    <div id="container">
         <div class="todolist">
             <h2>To-Do List<img src="images\todo-icon.png"></h2>
             <div class="row">
@@ -42,12 +42,10 @@
             </div>
             <!-- <div id="work-type">Work</div> -->
         </div>
-    </div>
-    <div class="lowerSection">
         <div class="bgmusic">
             <h2>Now Playing <img src="images/headphones.png"></h2> 
             <div id="player">
-                <iframe id = "musicframe" width="460" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=zAM1dqNBLOGRk26v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe id = "musicframe" width="max-content" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=zAM1dqNBLOGRk26v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
         <div class="settings">
